--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ beautifulsoup4==4.12.3
 faiss-cpu==1.8.0
 python-dotenv==1.0.1
 langchainhub==0.1.15
+text-generation==0.7.0
+transformers==4.39.3
+google_search_results==2.4.2
+sentencepiece==0.2.0
+Jinja2==3.1.3
+python-dotenv==1.0.1
+ipykernel==6.29.4
